--- a/src/views/components/Album/Album.css
+++ b/src/views/components/Album/Album.css
@@ -4,6 +4,8 @@
   padding: 16px;
   border: 1px solid rgba(0, 0, 0, 0.25);
   margin-bottom: 15px;
+  width: 100%;
+  max-width: 500px;
 }
 
 .album-header {
@@ -27,22 +29,22 @@
 .album-header--subtitle {
   font-size: 22px;
   line-height: 26px;
-  color: rgba(0, 0, 0, 0.45)
+  color: rgba(0, 0, 0, 0.45);
 }
 
-.album-tracks li {
+.album-tracks {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
   padding: 8px;
 }
 
-.album-tracks .active {
-  background: #f5f5f5;
-}
-
-.album-tracks li span {
+.album-tracks--track {
   font-size: 16px;
   line-height: 19px;
   color: rgba(0, 0, 0, 0.65);
+}
+
+.album-tracks .active {
+  background: #00bcd4;
 }
