--- a/src/views/components/Player/Player.css
+++ b/src/views/components/Player/Player.css
@@ -1,6 +1,54 @@
 .player-wrapper {
+  position: absolute;
+  top: auto;
+  padding: 10px 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid rgba(0, 0, 0, 0.25);
+}
+
+.player-controls {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+}
+
+.player-progress {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 250px;
+}
+
+.player-progress--progress {
+  width: 100%;
+  height: 8px;
+  margin-bottom: 8px;
+  background-color: #c2c2c2;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.player-progress--marker {
+  width: 12px;
+  height: 12px;
+  background-color: #999999;
+  border-radius: 50%;
+  top: -2px;
+  position: absolute;
+  cursor: pointer;
+}
+
+.player-progress--time {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
 }
