--- a/src/views/components/Album/Album.css
+++ b/src/views/components/Album/Album.css
@@ -43,8 +43,10 @@
   font-size: 16px;
   line-height: 19px;
   color: rgba(0, 0, 0, 0.65);
+  width: 100%;
+  text-align: left;
 }
 
 .album-tracks .active {
-  background: #00bcd4;
+  background: rgba(0, 0, 0, 0.25);
 }
