--- a/src/views/App.css
+++ b/src/views/App.css
@@ -1,8 +1,20 @@
 .App {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-width: 100wh;
-  padding: 1rem;
+  height: 100vh;
+}
+
+.albums {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  grid-row-gap: 16px;
+  padding: 16px;
+  height: calc(100% - 185px);
+  overflow-y: scroll;
+}
+
+.player {
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
