--- a/src/views/components/Album/Album.css
+++ b/src/views/components/Album/Album.css
@@ -3,16 +3,15 @@
   border-radius: 4px;
   padding: 16px;
   border: 1px solid rgba(0, 0, 0, 0.25);
-  margin-bottom: 15px;
-  width: 100%;
   max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .album-header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 20px;
 }
 
 .album-header--album-info {
@@ -45,6 +44,7 @@
   color: rgba(0, 0, 0, 0.65);
   width: 100%;
   text-align: left;
+  padding: 8px;
 }
 
 .album-tracks .active {
