--- a/src/views/components/Player/Player.css
+++ b/src/views/components/Player/Player.css
@@ -1,12 +1,7 @@
 .player-wrapper {
-  position: absolute;
-  top: auto;
-  padding: 10px 0;
-  bottom: 0;
   display: flex;
   flex-direction: column;
   background: #fff;
-  width: 100%;
   align-items: center;
   justify-content: center;
   border-top: 1px solid rgba(0, 0, 0, 0.25);
@@ -51,4 +46,13 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+.player-progress--bar {
+  width: 0;
+  height: 8px;
+  margin-bottom: 8px;
+  background-color: #3525e6;
+  border-radius: 4px;
+  cursor: pointer;
 }
