--- a/src/views/components/Player/Player.css
+++ b/src/views/components/Player/Player.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   background: #fff;
   align-items: center;
-  justify-content: center;
+  justify-content: end;
+  min-height: 152px;
   border-top: 1px solid rgba(0, 0, 0, 0.25);
 }
 
